--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.HotelManagementSystem"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.Bill_Generate_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.OrderDetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.CongratulationActivity"
             android:exported="false" />
         <activity
